# tmux-agent-dashboard

./: .gitignore  Cargo.toml  LICENSE  README.md  agent-dashboard.conf  tmux-agent-dashboard.tmux
extensions/pi/: README.md  index.ts  package.json
src/: activity.rs  adapter.rs  app.rs  bg.rs  cli.rs  event.rs  fuzzy.rs  group.rs  lib.rs  main.rs  navigate.rs  overview.rs  pending.rs  process.rs  session.rs  state.rs  time.rs  tmux.rs  tool_name.rs
src/adapter/: antigravity.rs  claude.rs  codex.rs  grok.rs  opencode.rs  pi.rs
src/app/: input.rs  render.rs  setup.rs
src/cli/: hook.rs  install_hooks.rs  jump.rs  notify.rs
src/cli/hook/: activity.rs  context.rs  handlers.rs  label.rs
src/cli/hook/context/: location.rs  meta.rs  subagents.rs
src/cli/hook/handlers/: attention.rs  run.rs  session.rs  status_priority.rs  subagent.rs  worktree.rs
src/event/: adapter.rs  kind.rs
src/state/: focus.rs  layout.rs  refresh.rs
src/tmux/: commands.rs  options.rs  query.rs  types.rs
src/ui/: colors.rs  dashboard.rs  icons.rs  mod.rs  overview.rs  text.rs
